# rosalind-test-file-reader

./: Cargo.toml  README.md
data/: test-1.txt
src/: lib.rs
