[package]
name = "rosalind_test_reader"
version = "0.1.0"
authors = ["Steven Liebregt <s.liebregt@outlook.com>"]
description = "A helper crate to read Rosalind test files"
edition = "2018"
repository = "https://github.com/stevenliebregt/cargo-generate-rosalind-template"
license = "WTFPL"

[dependencies]
